feat: item completed property api filter
